--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
   </head>
 
   <body>
-    <button>Log in</button>
-    <p class="short">#Get Your 14 Days Free Trial</p>
-    <h2 class="hero">Manage All Of Your Stuff Using A TGB</h2>
-    <p class="hero">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id tincidunt
-      eifend odio viverra diam aliquet donec again.
-    </p>
-    <button class="learn-more">Learn More</button>
+    <ul>
+      <li>Home</li>
+      <li>Service</li>
+      <li>About</li>
+      <li>Contact</li>
+      <li>Blog</li>
+    </ul>
+
+    <button class="log">Log in</button>
+    <div class="continer">
+      <p class="short">#Get Your 14 Days Free Trial</p>
+      <h2 class="hero">Manage All Of Your Stuff Using A TGB</h2>
+      <p class="heroe">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id tincidunt
+        eifend odio viverra diam aliquet donec again.
+      </p>
+      <button class="learn">Learn More</button>
+    </div>
   </body>
 </html>
